# reptile_template

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run_tests.py
data/: .gitkeep  README.md
data/examples/: sample_data.json  test_data.csv
data/schema/: mysql_schema.sql  sqlite_schema.sql
docs/: .gitkeep  CONFIGURATION.md  DATA_STORAGE.md  FAQ.md  QUICK_START.md  README.md
examples/: async_scraper.py  basic_scraper.py  custom_scraper.py
src/: __init__.py  cli.py
src/config/: settings.py
src/core/: __init__.py  parser.py  scraper.py  session.py
src/data/: __init__.py  processors.py  storage.py
src/loggers/: __init__.py  scraper_logger.py
src/utils/: __init__.py  formatters.py  helpers.py  validators.py
tests/: test_basic.py
